--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    INDEX - TEST1 INDEX - TEST2
+    INDEX - TEST1 INDEX - TEST2 INDEX - TEST3
 </body>
 </html>
